Fix text alignment and link

--- a/css/small.css
+++ b/css/small.css
@@ -27,3 +27,9 @@ aside.left, aside.right {
 	float: inherit;
 	margin-bottom: 0.625rem;
 }
+
+/* Section styles */
+
+section.contact {
+	text-align: center;
+}
